--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.loyer }}"></div>
+                    <div class="bar-{{ city.loyer }}">{{ city.loyer }} / 5</div>
                   </div>
                 </div>
                 
@@ -51,7 +51,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.animation }}"></div>
+                    <div class="bar-{{ city.animation }}">{{ city.animation }} / 5</div>
                   </div>
                 </div>
 
@@ -60,7 +60,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.delinquance }}"></div>
+                    <div class="bar-{{ city.delinquance }}">{{ city.delinquance }} / 5</div>
                   </div>
                 </div>
                 
@@ -69,7 +69,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.internet }}"></div>
+                    <div class="bar-{{ city.internet }}">{{ city.internet }} / 5</div>
                   </div>
                 </div>
 
@@ -78,27 +78,25 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.meteo }}"></div>
+                    <div class="bar-{{ city.meteo }}">{{ city.meteo }} / 5</div>
                   </div>
                 </div>
-
 
                 <div class="side">
                   <div>Transports</div>
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.transport }}"></div>
+                    <div class="bar-{{ city.transport }}">{{ city.transport }} / 5</div>
                   </div>
                 </div>
-
 
                 <div class="side">
                   <div>Coworkings</div>
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.coworking }}"></div>
+                    <div class="bar-{{ city.coworking }}">{{ city.coworking }} / 5</div>
                   </div>
                 </div>
 
@@ -123,7 +121,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.loyer }}"></div>
+                    <div class="bar-{{ city.loyer }}">{{ city.loyer }} / 5</div>
                   </div>
                 </div>
                 
@@ -132,7 +130,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.animation }}"></div>
+                    <div class="bar-{{ city.animation }}">{{ city.animation }} / 5</div>
                   </div>
                 </div>
 
@@ -141,7 +139,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.delinquance }}"></div>
+                    <div class="bar-{{ city.delinquance }}">{{ city.delinquance }} / 5</div>
                   </div>
                 </div>
                 
@@ -150,7 +148,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.internet }}"></div>
+                    <div class="bar-{{ city.internet }}">{{ city.internet }} / 5</div>
                   </div>
                 </div>
 
@@ -159,27 +157,25 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.meteo }}"></div>
+                    <div class="bar-{{ city.meteo }}">{{ city.meteo }} / 5</div>
                   </div>
                 </div>
-
 
                 <div class="side">
                   <div>Transports</div>
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.transport }}"></div>
+                    <div class="bar-{{ city.transport }}">{{ city.transport }} / 5</div>
                   </div>
                 </div>
-
 
                 <div class="side">
                   <div>Coworkings</div>
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.coworking }}"></div>
+                    <div class="bar-{{ city.coworking }}">{{ city.coworking }} / 5</div>
                   </div>
                 </div>
 
@@ -204,7 +200,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.loyer }}"></div>
+                    <div class="bar-{{ city.loyer }}">{{ city.loyer }} / 5</div>
                   </div>
                 </div>
                 
@@ -213,7 +209,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.animation }}"></div>
+                    <div class="bar-{{ city.animation }}">{{ city.animation }} / 5</div>
                   </div>
                 </div>
 
@@ -222,7 +218,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.delinquance }}"></div>
+                    <div class="bar-{{ city.delinquance }}">{{ city.delinquance }} / 5</div>
                   </div>
                 </div>
                 
@@ -231,7 +227,7 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.internet }}"></div>
+                    <div class="bar-{{ city.internet }}">{{ city.internet }} / 5</div>
                   </div>
                 </div>
 
@@ -240,27 +236,25 @@
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.meteo }}"></div>
+                    <div class="bar-{{ city.meteo }}">{{ city.meteo }} / 5</div>
                   </div>
                 </div>
-
 
                 <div class="side">
                   <div>Transports</div>
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.transport }}"></div>
+                    <div class="bar-{{ city.transport }}">{{ city.transport }} / 5</div>
                   </div>
                 </div>
-
 
                 <div class="side">
                   <div>Coworkings</div>
                 </div>
                 <div class="middle">
                   <div class="bar-container">
-                    <div class="bar-{{ city.coworking }}"></div>
+                    <div class="bar-{{ city.coworking }}">{{ city.coworking }} / 5</div>
                   </div>
                 </div>
 
@@ -273,7 +267,7 @@
         </div>
 
       <footer class="site-footer">
-        <span class="site-footer-credits">Ce site est une création de Hector Mercadier & Thomas Lesachey</span>
+        <span class="site-footer-credits">Copyright blablabla etc. etc. vous connaissez la chanson !</span>
       </footer>
     </main>
   </body>
