--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -166,7 +166,7 @@ a {
   background-color: #DADDE8;
   padding: 0.5rem;
   text-align: center;
-  color: #656565;
+  color: #0E105B;
   border-radius: 20px;
   font-weight:600 !important;
   width: 50rem;
@@ -526,11 +526,11 @@ a {
   }
 
   /* Individual bars */
-  .bar-5 {width: 100%; height: 18px; background-color: #0E105B; border-radius:10px;}
-  .bar-4 {width: 80%; height: 18px; background-color: #2B0C43; border-radius:10px;}
-  .bar-3 {width: 60%; height: 18px; background-color: #440930; border-radius:10px;}
-  .bar-2 {width: 40%; height: 18px; background-color: #5F051A; border-radius:10px;}
-  .bar-1 {width: 20%; height: 18px; background-color: #750208; border-radius:10px;}
+  .bar-5 {width: 100%; height: 1.3rem; background-color: #0E105B; border-radius:10px; text-align:left; font-weight:bold; padding-left:0.7rem;}
+  .bar-4 {width: 80%; height: 1.3rem; background-color: #2B0C43; border-radius:10px; text-align:left; font-weight:bold; padding-left:0.7rem;}
+  .bar-3 {width: 60%; height: 1.3rem; background-color: #440930; border-radius:10px; text-align:left; font-weight:bold; padding-left:0.7rem;}
+  .bar-2 {width: 40%; height: 1.3rem; background-color: #5F051A; border-radius:10px; text-align:left; font-weight:bold; padding-left:0.7rem;}
+  .bar-1 {width: 20%; height: 1.3rem; background-color: #750208; border-radius:10px; text-align:left; font-weight:bold; padding-left:0.7rem;}
 
   /* Responsive layout - make the columns stack on top of each other instead of next to each other */
   @media (max-width: 400px) {
