add favicon & few stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
@@ -24,13 +25,16 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title }}</h1>
+      <a href="#" class="btn">Classement</a>
+      <a href="#" class="btn">Methodologie</a>
+
     </header>
 
     <main id="content" class="main-content" role="main">
         <div class="project-tagline">{{ site.description }}</div>
 
-      <h2>Top Tier</h2>
-      <p>Voici les villes avec les meilleurs classements à travers toutes les catégories</p>
+      <h2>Le podium</h2>
+      <p>Voici les villes avec les meilleurs classements à travers toutes les catégories. Commencez déjà à faire vos bagages, il y a tout ce qu'il vous faut dans ces villes ! /p>
       <div class="tier_1">
           {% for city in site.data.villes_tier_1 %}
             <div class="ville">
@@ -108,7 +112,7 @@
           {% endfor %}
       </div>
 
-      <h2>Tier 2</h2>
+      <h2>Le peloton</h2>
       <p>Ces villes ont des forces indéniables. A regarder de près !</p>
       <div class="tier_2">
           {% for city in site.data.villes_tier_2 %}
@@ -187,8 +191,8 @@
           {% endfor %}
       </div>
 
-      <h2>Tier 3</h2>
-      <p>Encore, toujours plus de choix ! Notre algorythme (que dis-je, notre "IA") nous signale également ces villes franaçaises.</p>
+      <h2>Les poursuivants</h2>
+      <p>Encore, toujours plus de choix ! Notre algorythme (que dis-je, notre "<b>IA</b>") nous signale également ces villes françaises.</p>
         <div class="tier_3">
           {% for city in site.data.villes_tier_3 %}
             <div class="ville">
