--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -65,7 +65,7 @@ a {
 
 .btn {
   display: inline-block;
-  margin-bottom: 1rem;
+  margin: 1rem auto;
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(255, 255, 255, 0.08);
   border-color: rgba(255, 255, 255, 0.2);
@@ -86,11 +86,11 @@ a {
   }
 
   @include large {
-    padding: 0.75rem 1rem;
+    padding: 0.5rem 1rem;
   }
 
   @include medium {
-    padding: 0.6rem 0.9rem;
+    padding: 0.5rem 0.9rem;
     font-size: 0.9rem;
   }
 
@@ -426,7 +426,7 @@ a {
   border: 2px solid #2B0C43;
   border-radius : 30px;
   padding: 0.5rem 1rem;
-  margin:0.5rem;
+  margin:1rem 0.5rem;
   font-size:0.8rem;
 }
 
@@ -442,7 +442,7 @@ a {
   border: 2px solid #440930;
   border-radius : 30px;
   padding: 0.5rem 1rem;
-  margin:0.5rem;
+  margin: 1rem 0.5rem;
   font-size:0.8rem;
 }
 
