--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,35 +1,15 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
+  
   <head>
-
-    {% if site.google_analytics %}
-      <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', '{{ site.google_analytics }}');
-      </script>
-    {% endif %}
-    <meta charset="UTF-8">
-
-{% seo %}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    {% include head.html %}
   </head>
+
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
-
-    <header class="page-header" role="banner">
-      <h1 class="project-name">{{ site.title }}</h1>
-      <a href="#" class="btn">Classement</a>
-      <a href="#" class="btn">Methodologie</a>
-
-    </header>
-
+    
+    {% include header.html %}
+    
     <main id="content" class="main-content" role="main">
         <div class="project-tagline">{{ site.description }}</div>
 
@@ -271,7 +251,7 @@
         </div>
 
       <footer class="site-footer">
-        <span class="site-footer-credits">Copyright blablabla etc. etc. vous connaissez la chanson !</span>
+        {% include footer.html %}
       </footer>
     </main>
   </body>
