--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="page-header" role="banner">
-	<h1 class="project-name">{{ site.title }}</h1>
+	<a href="/"><h1 class="project-name">{{ site.title }}</h1></a>
 	<a href="/" class="btn">Classement</a>
 	<a href="methodologie" class="btn">Methodologie</a>
 </header>
