add trophies & remove useless images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
           {% for city in site.data.villes_tier_1 %}
             <div class="ville">
               <h3>{{ city.nom }}</h3>
+              <img src="/assets/images/trophy1.png" class="trophy"><img src="/assets/images/trophy1.png" class="trophy"><img src="/assets/images/trophy1.png" class="trophy"><img src="/assets/images/trophy1.png" class="trophy"><img src="/assets/images/trophy1.png" class="trophy">
               <div class="row">
 
                 <div class="side">
@@ -98,6 +99,7 @@
           {% for city in site.data.villes_tier_2 %}
             <div class="ville">
               <h3>{{ city.nom }}</h3>
+              <img src="/assets/images/trophy2.png" class="trophy"><img src="/assets/images/trophy2.png" class="trophy"><img src="/assets/images/trophy2.png" class="trophy"><img src="/assets/images/trophy2.png" class="trophy"><img src="/assets/images/trophygrey.png" class="trophy">
               <div class="row">
 
                 <div class="side">
@@ -177,6 +179,7 @@
           {% for city in site.data.villes_tier_3 %}
             <div class="ville">
               <h3>{{ city.nom }}</h3>
+              <img src="/assets/images/trophy3.png" class="trophy"><img src="/assets/images/trophy3.png" class="trophy"><img src="/assets/images/trophy3.png" class="trophy"><img src="/assets/images/trophygrey.png" class="trophy"><img src="/assets/images/trophygrey.png" class="trophy">
               <div class="row">
 
                 <div class="side">
