--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -86,11 +86,11 @@ a {
   }
 
   @include large {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 2rem;
   }
 
   @include medium {
-    padding: 0.5rem 0.9rem;
+    padding: 0.5rem 1.5rem;
     font-size: 0.9rem;
   }
 
@@ -169,8 +169,9 @@ a {
   color: #0E105B;
   border-radius: 20px;
   font-weight:600 !important;
-  width: 50rem;
+  max-width: 50rem;
   margin: 2rem auto;
+  padding: 0.5rem 2rem;
   box-shadow: inset 2px 2px 3px 0px rgba(0,0,0,0.75);
 
   @include large {
@@ -417,6 +418,7 @@ a {
   color:#264193;
   text-align: center;
   font-size: 1.5rem;
+  margin: 0.2rem auto;
   }
 
 
@@ -434,6 +436,7 @@ a {
   color:#2B0C43;
   text-align: center;
   font-size: 1.3rem;
+  margin: 0.2rem auto;
   }
 
 .tier_3 .ville{
@@ -450,6 +453,7 @@ a {
   color:#440930;
   text-align: center;
   font-size: 1.3rem;
+  margin: 0.2rem auto;
   }
 
 .tell_me_more {
@@ -538,4 +542,10 @@ a {
           width: 100%;
       }
   }
+}
+
+.trophy{
+  height: 1.5rem;
+  width: auto;
+  margin: auto 0.5rem;
 }
