--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <div class="project-tagline">{{ site.description }}</div>
 
       <h2>Le podium</h2>
-      <p>Voici les villes avec les meilleurs classements à travers toutes les catégories. Commencez déjà à faire vos bagages, il y a tout ce qu'il vous faut dans ces villes ! /p>
+      <p>Voici les villes avec les meilleurs classements à travers toutes les catégories. Commencez déjà à faire vos bagages, il y a tout ce qu'il vous faut dans ces villes !</p>
       <div class="tier_1">
           {% for city in site.data.villes_tier_1 %}
             <div class="ville">
