--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
 
     {% seo %}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=980px, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <link rel="icon" type="image/png" href="/assets/images/favicon.png"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
