--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,6 +9,9 @@ $header-bg-color-secondary: #780206 !default;
 $content-bg-color: #B7F8DB;
 $content-bg-color-secondary: #B7F8DB ;
 $body-background-color:#fff;
+$color-tier1 : #264193;
+$color-tier2 : #481F6B;
+$color-tier3 : #602043;
 
 // Text
 $section-headings-color: #EA5663 !default;
