--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,10 +89,10 @@
               </div>
 
             <!-- Modal button -->
-              <a href="#"><div class="tell_me_more" data-toggle="modal" data-target="#Modal{{ city.nom }}">Dites m'en plus !</div></a>
+              <a href="#Modal{{ city.rang }}"><div class="tell_me_more" data-toggle="modal" data-target="#Modal{{ city.rang }}">Dites m'en plus !</div></a>
             </div>
             <!-- Modal content -->
-            <div class="modal fade" id="Modal{{ city.nom }}" tabindex="-1" role="dialog" aria-labelledby="{{ city.nom }}ModalCenterTitle" aria-hidden="true">
+            <div class="modal fade" id="Modal{{ city.rang }}" tabindex="-1" role="dialog" aria-labelledby="{{ city.nom }}ModalCenterTitle" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -103,9 +103,7 @@
                   </div>
                   <div class="modal-body">
                     <p>Donnez-nous votre adresse email et nous vous tiendrons au courrant dès que nous aurons plus d'information à vous communiquer sur  {{ city.nom }} !</p>
-                     <form style="text-align:center;" action="https://tinyletter.com/hectorm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/hectorm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:15rem" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed" /><input type="submit" value="S'inscrire" class="tell_me_more"/></form>
-                  </div>
-                  <div class="modal-footer">
+                     <form style="text-align:center;" action="https://tinyletter.com/hectorm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/hectorm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:15rem" name="email" id="tlemail" placeholder="Adresse email"/></p><input type="hidden" value="1" name="embed" /><input type="submit" value="S'inscrire" class="tell_me_more"/></form>
                   </div>
                 </div>
               </div>
@@ -186,10 +184,27 @@
                 </div>
 
               </div>
-
               <!-- Modal button -->
-              <a href="#"><div class="tell_me_more" data-toggle="modal" data-target="#Modal{{ city.nom }}">Dites m'en plus !</div></a>
-
+              <a href="#Modal{{ city.rang }}"><div class="tell_me_more" data-toggle="modal" data-target="#Modal{{ city.rang }}">Dites m'en plus !</div></a>
+            </div>
+            <!-- Modal content -->
+            <div class="modal fade" id="Modal{{ city.rang }}" tabindex="-1" role="dialog" aria-labelledby="{{ city.nom }}ModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h3 class="modal-title" id="{{ city.nom }}ModalLongTitle">Tout savoir sur {{ city.nom }}</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <p>Donnez-nous votre adresse email et nous vous tiendrons au courrant dès que nous aurons plus d'information à vous communiquer sur  {{ city.nom }} !</p>
+                     <form style="text-align:center;" action="https://tinyletter.com/hectorm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/hectorm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:15rem" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed" /><input type="submit" value="S'inscrire" class="tell_me_more"/></form>
+                  </div>
+                  <div class="modal-footer">
+                  </div>
+                </div>
+              </div>
             </div>
           {% endfor %}
       </div>
@@ -266,6 +281,27 @@
                   </div>
                 </div>
 
+              </div>
+              <!-- Modal button -->
+              <a href="#Modal{{ city.rang }}"><div class="tell_me_more" data-toggle="modal" data-target="#Modal{{ city.rang }}">Dites m'en plus !</div></a>
+            </div>
+            <!-- Modal content -->
+            <div class="modal fade" id="Modal{{ city.rang }}" tabindex="-1" role="dialog" aria-labelledby="{{ city.nom }}ModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h3 class="modal-title" id="{{ city.nom }}ModalLongTitle">Tout savoir sur {{ city.nom }}</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <p>Donnez-nous votre adresse email et nous vous tiendrons au courrant dès que nous aurons plus d'information à vous communiquer sur  {{ city.nom }} !</p>
+                     <form style="text-align:center;" action="https://tinyletter.com/hectorm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/hectorm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:15rem" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed" /><input type="submit" value="S'inscrire" class="tell_me_more"/></form>
+                  </div>
+                  <div class="modal-footer">
+                  </div>
+                </div>
               </div>
             </div>
           {% endfor %}
