--- a/_includes/city_modal.html
+++ b/_includes/city_modal.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="Modal{{ city.rang }}" tabindex="-1" role="dialog" aria-labelledby="{{ city.nom }}ModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title" id="{{ city.nom }}ModalLongTitle">Tout savoir sur {{ city.nom }}</h3>
@@ -8,7 +8,12 @@
         </button>
       </div>
       <div class="modal-body">
-        <div id="map{{ city.rang }}" style="height:15rem; width:100%;position: inherited;"></div>
+        <div style="text-align:center">
+          <div class="mapbox" id="map{{ city.rang }}"></div>
+          <div class="ranking">
+            {% include city_ratings.html %}
+          </div>
+        </div>
         <p>Donnez-nous votre adresse email et nous vous tiendrons au courrant dès que nous aurons plus d'information à vous communiquer sur  {{ city.nom }} !</p>
         <form style="text-align:center;" action="https://tinyletter.com/hectorm" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/hectorm', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:15rem" name="email" id="tlemail" placeholder="Adresse email"/></p><input type="hidden" value="1" name="embed" /><input type="submit" value="S'inscrire" class="tell_me_more"/></form>
       </div>
