--- a/_includes/map_script.html
+++ b/_includes/map_script.html
@@ -1,13 +1,9 @@
 <script>
   var mymap{{ city.rang }} = L.map('map{{ city.rang }}').setView([46.2901, 2.3135], 5);
-  L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiaHJlbW90ZWZyYW5jZSIsImEiOiJjam5qdmVoMGEwbWpiM2tzNXcwem5xZWUzIn0.EVnfakBtRnl9aQPunsM5fA', { /* set your personal MapBox Access Token */
-    maxZoom: 20, /* zoom limit of the map */
-    attribution: '<a href="http://openstreetmap.org">OpenStreetMap</a> | ' +
-      '<a href="http://mapbox.com">Mapbox</a>', /* set the map's caption */
-      id: 'mapbox.streets' /* mapbox.light / dark / streets / outdoors / satellite */
-  }).addTo(mymap{{ city.rang }});
-  L.marker([{{ city.longitude }}, {{ city.latitude }}]).addTo(mymap{{ city.rang }}); /* set your location's GPS Coordinates : [LAT,LON] */
-
+  L.tileLayer('https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png', { 
+    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+}).addTo(mymap{{ city.rang }});
+  L.marker([{{ city.longitude }}, {{ city.latitude }}]).bindPopup("{{ city.nom }}").addTo(mymap{{ city.rang }}); /* set your location's GPS Coordinates : [LAT,LON] */
   $("#Modal{{ city.rang }}").on('shown.bs.modal', function(e) {
     mymap{{ city.rang }}.invalidateSize();
   });
