--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -642,5 +642,22 @@ a {
   width: 18rem;
   margin: 1rem;
   border: none;
+}
 
+.submitbutton{
+  background-color:$header-bg-color;
+  max-width:15rem;
+  padding-left:3rem;
+  padding-right:3rem;
+  height:2.5rem;
+  line-height:2.5rem;
+  margin: 0.5rem auto;
+  border-radius:15px;
+  border:none;
+  color:#FFF;
+  font-family: "Montserrat";
+  font-weight:600;
+  font-size: 1rem;
+  vertical-align:middle;
+  text-align:center;
 }
