Update map width on mobile

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -631,9 +631,13 @@ a {
   display: inline-block;
   vertical-align:middle;
   height:21rem;
-  width:25rem;
+  width:21rem;
   position: inherited;
   margin: 1rem;
+
+  @media screen and (max-width: #{$medium-breakpoint}) {
+    width:18rem;
+  }
 }
 
 .ranking{
