Update Footer + titles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,10 @@
 <footer class="site-footer">
-	<span class="site-footer-credits">Copyright blablabla etc. etc. vous connaissez la chanson !</span>
+	<div class="social_networks">
+		<a href="https://www.facebook.com/Remote-France-1186863414796392" class="fa fa-facebook" target="_blank"></a>
+		<a href="https://twitter.com/FranceRemote" class="fa fa-twitter" target="_blank"></a>
+		<a href="https://www.facebook.com/Remote-France-1186863414796392" class="fa fa-linkedin" target="_blank"></a>
+	</div>
+	<span class="site-footer-credits"></span>
 
 	<!--Bootstrap JS-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
