--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -26,4 +26,4 @@ $code-text-color: #567482 !default;
 // Borders
 $border-color: #dce6f0 !default;
 $table-border-color: #e9ebec !default;
-$hr-border-color: #eff0f1 !default;
+$hr-border-color: #777777 !default;
