--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -229,8 +229,13 @@ a {
     color: $section-headings-color;
   }
 
+  h1{
+    text-align:center;
+  }
+
   h2{
-    font-size: 2rem;
+    font-size: 1.5rem;
+    font-weight: 600;
   }
 
   p {
@@ -373,7 +378,7 @@ a {
 .site-footer {
   padding-top: 2rem;
   margin-top: 2rem;
-  border-top: solid 1px $hr-border-color;
+  /*border-top: solid 1px $hr-border-color;*/
 
   @include large {
     font-size: 1rem;
@@ -428,7 +433,7 @@ a {
     font-size:0.9rem;
   }
 
-  h3{
+  h2{
     color:$color-tier1;
     text-align: center;
     font-size: 1.5rem;
@@ -464,7 +469,7 @@ a {
     font-size:0.8rem;
   }
 
-  h3{
+  h2{
     color:$color-tier2;
     text-align: center;
     font-size: 1.3rem;
@@ -500,7 +505,7 @@ a {
     font-size:0.8rem;
   }
 
-  h3{
+  h2{
     color:$color-tier3;
     text-align: center;
     font-size: 1.3rem;
@@ -634,10 +639,6 @@ a {
   width:21rem;
   position: inherited;
   margin: 1rem;
-
-  @media screen and (max-width: #{$medium-breakpoint}) {
-    width:18rem;
-  }
 }
 
 .ranking{
@@ -664,4 +665,29 @@ a {
   font-size: 1rem;
   vertical-align:middle;
   text-align:center;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    color:#333333;
+}
+
+.fa:hover {
+    opacity: 0.7;
+    color:#333333;
+}
+
+.social_networks{
+  text-align: center;
+  margin: auto;
+  max-width: 50rem;
+  vertical-align: middle;
+  border:solid 0.1rem #777777;
+  border-radius: 1rem;
+  box-shadow: 1px 1px 3px 0px #656565;
+  background:#f7f7f7;
 }
