--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -667,27 +667,29 @@ a {
   text-align:center;
 }
 
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
+footer{
+  .fab {
+      padding: 20px;
+      font-size: 30px;
+      width: 50px;
+      text-align: center;
+      text-decoration: none;
+      color:#333333;
+  }
+
+  .fab:hover {
+      opacity: 0.7;
+      color:#333333;
+  }
+
+  .social_networks{
     text-align: center;
-    text-decoration: none;
-    color:#333333;
-}
-
-.fa:hover {
-    opacity: 0.7;
-    color:#333333;
-}
-
-.social_networks{
-  text-align: center;
-  margin: auto;
-  max-width: 50rem;
-  vertical-align: middle;
-  border:solid 0.1rem #777777;
-  border-radius: 1rem;
-  box-shadow: 1px 1px 3px 0px #656565;
-  background:#f7f7f7;
+    margin: auto;
+    max-width: 50rem;
+    vertical-align: middle;
+    border:solid 0.1rem #777777;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 3px 0px #656565;
+    background:#f7f7f7;
+  }
 }
