--- a/_layouts/methodologie.html
+++ b/_layouts/methodologie.html
@@ -9,8 +9,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
     
     {% include header.html %}
-    
-    <main id="content" class="main-content" role="main" style="width:65rem;text-align:justify;";>
+      <main id="content" class="main-content" role="main">
       <div class="project-tagline">La méthodologie du classement Projet Mercure</div>
 
       {{ content }}
