update nb restaurants label

--- a/_includes/city_modal.html
+++ b/_includes/city_modal.html
@@ -33,7 +33,7 @@
             </tr>
             <tr>
               <td><span class="fa fa-cocktail"></span></td>
-              <td>Nombre de restaurants/habitant</td>
+              <td>Nombre de restaurants pour 1000 habitants</td>
               <td align="right">{{ city.proportionrestaurants }}</td>
             </tr>
             <tr>
