--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -438,7 +438,12 @@ h1 span{
     padding: 0.5rem 1rem;
     margin:0.75rem;
     font-size:0.9rem;
+
+    @include small {
+    width: 17rem;
+    }
   }
+
 
   h2{
     color:$color-tier1;
@@ -573,6 +578,10 @@ h1 span{
   .row{
     max-width:20rem;
     margin: 1rem auto;
+
+    @include small {
+      max-width: 15rem;
+    }
   }
   
   .side {
@@ -611,12 +620,12 @@ h1 span{
   .bar-2 {width: 40%; height: 1.3rem; background-color: #5F051A; border-radius:10px; text-align:left; font-weight:bold; padding-left:0.7rem;}
   .bar-1 {width: 20%; height: 1.3rem; background-color: #750208; border-radius:10px; text-align:left; font-weight:bold; padding-left:0.7rem;}
 
-  /* Responsive layout - make the columns stack on top of each other instead of next to each other */
+  /* Responsive layout - make the columns stack on top of each other instead of next to each other 
   @media (max-width: 400px) {
       .side, .middle {
           width: 100%;
       }
-  }
+  }*/
 }
 
 .trophy{
