--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     <!-- the maps -->
     <main id="content" class="main-content" role="main">
       <div class="project-tagline">{{ site.description }}</div>
-      <h1 class="tier_1title">Le podium <span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span></h1>
+      <h1 class="tier_1title">Le podium <div class="trophies"><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span></div></h1>
       <p>Voici les villes avec les meilleurs classements à travers toutes les catégories. Commencez déjà à faire vos bagages, il y a tout ce qu'il vous faut dans ces villes !</p>
       <div class="tier_1">
           {% for city in site.data.villes_tier_1 %}
@@ -39,7 +39,7 @@
           {% endfor %}
       </div>
 
-      <h1 class="tier_2title">Le peloton <span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy lightsoff"></span></h1>
+      <h1 class="tier_2title">Le peloton <div class="trophies"><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy lightsoff"></span></div></h1>
       <p>Ces villes ont des forces indéniables. A regarder de près !</p>
       <div class="tier_2">
           {% for city in site.data.villes_tier_2 %}
@@ -52,7 +52,7 @@
           {% endfor %}
       </div>
 
-      <h1 class="tier_3title">Les poursuivants <span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy lightsoff"></span><span class="fa fa-trophy lightsoff"></span></h1>
+      <h1 class="tier_3title">Les poursuivants <div class="trophies"><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy lightsoff"></span><span class="fa fa-trophy lightsoff"></span></div></h1>
       <p>Encore, toujours plus de choix ! Notre algorythme (que dis-je, notre "<b>IA</b>") nous signale également ces villes françaises.</p>
         <div class="tier_3">
           {% for city in site.data.villes_tier_3 %}
