--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<footer class="site-footer">
-	<div class="social_networks">
-		<a href="https://www.facebook.com/Remote-France-1186863414796392" class="fab fa-facebook" target="_blank"></a>
-		<a href="https://twitter.com/FranceRemote" class="fab fa-twitter" target="_blank"></a>
-		<a href="https://www.facebook.com/Remote-France-1186863414796392" class="fab fa-linkedin" target="_blank"></a>
+<footer class="text-center py-4 text-light motivation-lead">
+	<div class="">
+		<a href="https://www.facebook.com/Remote-France-1186863414796392" class="fab fa-facebook text-light" target="_blank"></a>
+		<a href="https://twitter.com/FranceRemote" class="fab fa-twitter text-light" target="_blank"></a>
+		<a href="https://www.facebook.com/Remote-France-1186863414796392" class="fab fa-linkedin text-light" target="_blank"></a>
 	</div>
 	<span class="site-footer-credits"></span>
 
