--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="page-header" role="banner">
 	<a href="/"><h1 class="project-name">{{ site.title }}</h1></a>
 	<a href="/" class="btn-jek">Classement</a>
-	<a href="methodologie" class="btn-jek">Methodologie</a>
-	<a href="blog" class="btn-jek">Blog</a>
+	<a href="/methodologie" class="btn-jek">Methodologie</a>
+	<a href="/blog" class="btn-jek">Blog</a>
 </header>
