--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -3,6 +3,7 @@
 @import "variables";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,900');
+@import url('https://fonts.googleapis.com/css?family=Exo 2:200,300,400,500,600,700,800,900');
 
 @mixin large {
   @media screen and (min-width: #{$large-breakpoint}) {
@@ -222,18 +223,19 @@ a {
   h6 {
     margin-top: 2rem;
     margin-bottom: 1rem;
-    font-family:"Montserrat";
-    font-weight: 800;
+    font-family:"Exo 2";
     color: $section-headings-color;
   }
 
   h1{
     text-align:center;
+    font-size:2.5rem;
+    font-weight:700;
   }
 
   h2{
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-size: 2rem;
+    font-weight: 700;
   }
 
   p {
@@ -448,7 +450,7 @@ h1 span{
   h2{
     color:$color-tier1;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
   }
 
   .tell_me_more{
@@ -484,7 +486,7 @@ h1 span{
   h2{
     color:$color-tier2;
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     margin: 0.2rem auto;
   }
 
@@ -520,7 +522,7 @@ h1 span{
   h2{
     color:$color-tier3;
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     margin: 0.2rem auto;
     }
 
@@ -717,4 +719,17 @@ footer{
     box-shadow: 1px 1px 3px 0px #656565;
     background:#f7f7f7;
   }
+}
+
+
+.standard-page-container{
+  margin:auto;
+  width:70rem;
+}
+
+
+.motivation-lead{
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  opacity:0.6;
+  font-family:"Exo 2";
 }
